tests for forum thread page; add video page

--- a/templates/articles/create.html
+++ b/templates/articles/create.html
@@ -11,72 +11,7 @@
 <div class="border_or">
     <div class="normal">
         <div class="p_hv">
-            <b>Здесь вы можете добавить свою статью для публикации на "Форуме".</b>
-            Не отзыв, не сообщение в три строки, а нормальную, разумных размеров статью,
-            которую людям было бы интересно читать. Она будет опубликована так же,
-            как статьи редакции с анонсом и аннотацией на главной странице, со своей книгой отзывов и т.д.
-            <br>
-            <b>Зачем это мне?</b> Наш сервер -- единственное место в русском Интернете,
-            где можно не просто "оставить свой комментарий", но опубликовать полноценную статью,
-            которую прочитают тысячи читателей. Мы рекламируем этот сервер,
-            стараемся сделать его максимально удобным, поэтому именно здесь ваше мнение будет наиболее весомым.
-            Зачем вообще высказывать свое мнение и свои идеи?
-            А как вы еще собираетесь изменить что-то в стране и в жизни?
-            Давайте поймем сначала, кто мы, где мы, и чего хотим.
-            <br>
-            <b>Структура статьи</b>: У статьи есть <i>автор</i> (с <i>адресом</i> или без),
-            есть <i>заголовок</i> (лучше длиной до 5-7 слов, острый и привлекательный:
-            например, не "Почему мнение граждан не интересно правительству страны", но "Мысли вглух"),
-            <i>аннотация</i> (длиной примерно в три предложения, описывающая, о чем, статья, собственно говоря)
-            и сам <i>текст</i>, произвольной длины (статья не обязательно должна быть на три экрана -- если вы сможете передать свою мысль в трех абзацах,
-            то это даже лучше). Название, автор и аннотация выносятся на первую страницу,
-            а внутри статьи аннотация является ее первым абзацем.
-            <br>
-            <b>Правила модерирования</b>: После того, как вы добавили статью,
-            редакция сайта получает уведомление и проверяет ее.
-            Статья проходит корректора (чьи представления о правилах русского языка могут не совпадать с вашими,
-            но зато они подтверждены справочниками) и тогда открывается для читателей,
-            если редакция не заблокирует ее голосованием.
-            В последнем случае редакция не объясняет свое решение,
-            однако причины отказа в публикации могут включать:
-            нарушение статьей законов РФ или международных законов об авторском праве,
-            использование нецензурных и необоснованно грубых выражений, необоснованные обвинения,
-            непроверенные данные о лицах и организациях, непонятность и непоследовательность текста,
-            несоответствие темы статьи тематике "Форума", отсутствие выраженной идеи,
-            слишком большой или слишком малый размер, рекламные обращения, откровенная глупость,
-            оголтелая антилиберальность.
-            Это ужесточение правил и рамок по сравнению с условиями приема статей в 1998 году - ранее не предполагалась цензура и требования были минимальными.
-            Теперь мы фактически отказываемся публиковать статьи,
-            в которых без привнесения новых идей и парадигм предлагается возврат к коммунистическим нормам
-            и безосновательно (без ссылки на документы) пересматриваются принятые сегодня представления о прошлом России и близких стран.
-            <br>Если понадобится несущественная правка -- мы ее внесем.
-            Если понадобится правка, затрагивающая смысл -- мы свяжемся с вами (если вы оставили работающий адрес электронной почты).
-            Также могут возникнуть проблемы, если текст слишком велик.
-            <em>Пожалуйста, оставляйте адрес e-mail, чтобы можно было обсудить с вами эти проблемы!</em>
-            Внутри текста статьи допускается базовое html-форматирование: списки, выделения, ссылки, заголовки, простейшие таблицы.
-            Все прочее (включая комментарии) вырезает автомат.
-            <br>
-            <b>Стилистические рекомендации</b>: Выполняйте простейшие правила построения статьи.
-            У статьи должна быть центральная мысль, которую вы хотите донести до читателя.
-            Эту мысль надо выражать живо, интересно, но, главное, понятно.
-            Особое внимание уделяйте началу статьи и ее концу -- именно они больше запоминаются читателю,
-            создают у него мнение о тексте в целом.
-            <br>
-            <b>Темы</b>: Сейчас "Форум" посвящен кризису в России и всем связаным с ним аспектам.
-            Предметом рассмотрения могут быть политика, экономика, искусство или религия -- все что угодно,
-            если это связано с текущим состоянием России и ее насущными проблемами.
-            Например, можно прокомментировать те или иные события, обратить внимание на новые аспекты проблем,
-            предложить новые модели, описывающие происходящее.
-            <b>Не нужно отвечать на предыдущие статьи новыми статьями! Такая форма дискуссии не интересна, такие тексты (в которых нет нового развития темы) будут автоматически переноситься в форму книги отзывов.</b>
-            <br>
-            <b>Безопасность текста</b>: Не пишите статей прямо в форму!
-            Пишите на локальной машине и обязательно сохраните копию.
-            Мы не можем гарантировать отсутствие ошибок в программах: можно представить себе ситуацию,
-            когда текст из формы будет утерян. Хотя пока таких ошибок не замечено.
-            Также будьте аккуратны с HTML-форматированием. <b>Однако базовое HTML-форматирование применять можно. Вместо выделения слов верхним регистром, выделяйте лучше тэгами&lt;b&gt;.</b>
-            <p>
-                <b>Если у Вас есть вопросы и сложности со вводом статьи, или вопросы по отбору статей или редактированию, можете задать их по адресу <a href=mailto:forum-msk@yandex.ru>forum-msk@yandex.ru</a></b>.
-            </p>
+            {% include 'articles/incl/add_material_recommends.html' with full_text=True %}
         </div>
     </div>
 </div>
@@ -125,11 +60,9 @@
                     <td>
                         {% if form.author_names.errors %}
                             {% for error in form.author_names.errors %}
-                                <center>
-                                    <span class="normal" style="color:red">
-                                        <b>{{ error|escape }}</b>
-                                    </span>
-                                </center>
+                                <span class="normal" style="color:red">
+                                    <b>{{ error|escape }}</b>
+                                </span>
                             {% endfor %}
                         {% endif %}
                         <input type="text" name="author_names" value="{{ form.author_names.value|default:'' }}" maxlength="250" style="width:100%;">
@@ -147,11 +80,9 @@
                     <td>
                         {% if form.title.errors %}
                             {% for error in form.title.errors %}
-                                <center>
-                                    <span class="normal" style="color:red">
-                                        <b>{{ error|escape }}</b>
-                                    </span>
-                                </center>
+                                <span class="normal" style="color:red">
+                                    <b>{{ error|escape }}</b>
+                                </span>
                             {% endfor %}
                         {% endif %}
                         <input type="text" name="title" value="{{ form.title.value|default:'' }}" maxlength="100" style="width:100%;">
@@ -170,11 +101,9 @@
                         <div style="width:1px; height:7px"><!-- --></div>
                         {% if form.description.errors %}
                             {% for error in form.description.errors %}
-                                <center>
-                                    <span class="normal" style="color:red">
-                                        <b>{{ error|escape }}</b>
-                                    </span>
-                                </center>
+                                <span class="normal" style="color:red">
+                                    <b>{{ error|escape }}</b>
+                                </span>
                             {% endfor %}
                         {% endif %}
                         <textarea name="description" rows="8" style="width:100%;">{{ form.description.value|default:'' }}</textarea>
@@ -186,26 +115,22 @@
                     <div style="width:1px; height:7px"><!-- --></div>
                     {% if form.content.errors %}
                             {% for error in form.content.errors %}
-                                <center>
-                                    <span class="normal" style="color:red">
-                                        <b>{{ error|escape }}</b>
-                                    </span>
-                                </center>
+                                <span class="normal" style="color:red">
+                                    <b>{{ error|escape }}</b>
+                                </span>
                             {% endfor %}
                         {% endif %}
                     <textarea name="content" rows="8" style="width:100%;">{{ form.content.value|default:'' }}</textarea>
                     <div style="width:1px; height:7px"><!-- --></div>
                 </td>
                 </tr>
-                {% if token %}
+                {% if not request.is_bot %}
                     <tr>
-                        <td width="250" class="normal">
-                            <b>Введите число, указанное на картинке:</b>
-                        </td>
+                        <td width="250" class="normal"><b>Введите число, указанное на картинке:</b></td>
                         <td>
-                            <script>document.write('<img src="/captcha/i.gif?<% $token %>" width="80" height="30" alt=""><br />');</script>
-                            <input type="text" name="token" value="" style="width:86px"><br />
-                            <input type="hidden" name="ctoken" value="{{ token }}">
+                            <img src="/captcha/i.gif?<% $token %>" width="80" height="30" alt="">
+                            <br />
+                            <input type="text" name="captcha" value="" style="width:86px"><br />
                         </td>
                     </tr>
                 {% endif %}
