--- a/templates/forum/thread.html
+++ b/templates/forum/thread.html
@@ -75,6 +75,8 @@
         </tr>
     </table>
 
+    <div style="width:1px; height:7px"><!-- --></div>
+
     <a id="replay"></a>
     <div class="big1 bl">Ответить</div>
     <div style="width:1px; height:1px"><!-- --></div>
