--- a/templates/incl/sidebar/blocks/internet_tv.html
+++ b/templates/incl/sidebar/blocks/internet_tv.html
@@ -39,9 +39,9 @@
         <td>
             <div class="p_hv">
                 <span class="active">
-                    <a href="/video/add.html">&lt;&lt;</a>
+                    <a href="{% url 'articles:video_add' %}">&lt;&lt;</a>
                 </span>
-                <a href="/video/add.html">прислать видео</a>
+                <a href="{% url 'articles:video_add' %}">прислать видео</a>
             </div>
         </td>
         <td class="align-right">
