fix missing captcha on forum article page

--- a/templates/forum/thread.html
+++ b/templates/forum/thread.html
@@ -82,7 +82,7 @@
     <div style="width:1px; height:1px"><!-- --></div>
     <div class="border_bl">
         <div class="p_hv">
-            {% include 'incl/forum_message_form.html' with article=thread %}
+            {% include 'incl/forum_message_form.html' with article=thread form=comment_form %}
         </div>
     </div>
 
