--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -2,6 +2,11 @@
 
 {% load static %}
 
+{% block mobile_url %}
+    <link rel="alternate" media="only screen and (max-width: 640px)" href="{{ request.scheme }}://{{ request.get_host }}{% url 'pda:index' %}" />
+    <link rel="alternate" media="handheld" href="{{ request.scheme }}://{{ request.get_host }}{% url 'pda:index' %}" />
+{% endblock %}
+
 {% block content %}
 <table class="full-table">
     <tr>
