--- a/templates/articles/video.html
+++ b/templates/articles/video.html
@@ -54,7 +54,7 @@
                                                     </div>
                                                     <div class="p_t">
                                                         <div class="normal">
-                                                            <a href="{{ article.get_absolute_url }}">{{ article.preview }}</a>
+                                                            <a href="{{ article.get_absolute_url }}">{{ article.preview|striptags }}</a>
                                                             <span class="active">
                                                                 <a href="{{ article.get_absolute_url }}">&gt;&gt;</a>
                                                             </span>
